# FloatNote

./: .gitignore  LICENSE  README.md  README.zh-CN.md  floatnote.rar  index.html  package-lock.json  package.json  screenshot.html  vite.config.js
.workbuddy/memory/: 2026-06-10.md  2026-06-11.md
floatnote_android/: .gitignore  README.md  pubspec.yaml
floatnote_android/android/app/: build.gradle.kts
floatnote_android/lib/: main.dart
floatnote_android/lib/models/: notebook.dart  sync_payload.dart  todolist.dart  trash_item.dart
floatnote_android/lib/providers/: notebook_provider.dart  settings_provider.dart  sync_provider.dart  todolist_provider.dart  trash_provider.dart
floatnote_android/lib/screens/: home_screen.dart  more_screen.dart
floatnote_android/lib/services/: id_generator.dart  storage_service.dart  sync_service.dart  trash_service.dart
floatnote_android/lib/theme/: app_theme.dart
floatnote_android/lib/utils/: color_constants.dart  date_utils.dart  text_utils.dart
src/: App.vue  ScreenshotWindow.vue  main.js  screenshot-main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: NotePanel.vue  ScreenshotOverlay.vue  SyncPanel.vue  TodoPanel.vue
src/composables/: useClickOutside.js  useCollectionManager.js  useContextMenu.js  useDragSort.js  useInlineRename.js  useToast.js
src/i18n/: en.json  index.js  zh.json
src/services/: syncService.js  syncState.js
src/utils/: colors.js  date.js  id.js  storage.js  trash.js
(+7 files in other folders)
