[package]
name = "floatnote"
version = "1.3.1"
edition = "2021"

[profile.release]
strip = true          # 去除调试符号，减小体积
opt-level = "s"       # 优化体积而非速度

# Universal dependencies (desktop + Android)
[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"

# Desktop-only dependencies (not compiled for Android)
[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
rfd = "0.15"
xcap = "0.8"
image = "0.25"
arboard = "3"
base64 = "0.22"
reqwest = { version = "0.13.4", features = ["json"] }

# Windows-only: native window opacity via SetLayeredWindowAttributes
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
raw-window-handle = "0.6"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
